# ExcelMiner

./: .eslintrc.json  .gitignore  .prettierrc  .releaserc.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  GAP_ANALYSIS.md  OPTIMIZATION_SUGGESTIONS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: 业务逻辑详解.md  用户操作手册.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis_cmd.rs  dashboard_cmd.rs  export_cmd.rs  import_cmd.rs  mod.rs  project_cmd.rs
src-tauri/src/models/: analysis.rs  company.rs  indicator.rs  mod.rs  project.rs
src-tauri/src/services/: ai_analyzer.rs  company_registry.rs  data_aggregator.rs  engine_plugin.rs  excel_reader.rs  mod.rs  number_parser.rs  quality_checker.rs  report_writer.rs  xlsx_writer.rs
src-tauri/src/services/data_aggregator/: commercial.rs  financial.rs  hotel.rs  insurance.rs
src-tauri/src/utils/: date_utils.rs  log_sanitizer.rs  logger.rs  mod.rs  retry.rs
src-tauri/tests/: integration_test.rs  test_aggregation.rs  test_analysis.rs  test_core.rs  test_integration.rs  test_real_data.rs  test_xlsx_debug.rs
src-tauri/tests/fixtures/2026年4月分析/: 【2026年4月】经营数据.xlsx
src-tauri/tests/fixtures/2026年4月分析/活动量/: 北京中言.xlsx  君康经纪.xlsx  大连凯丹.xlsx  春夏秋冬.xlsx  福建钱隆.xlsx  重庆宜新.xlsx  重庆瑞尔.xlsx
src-tauri/tests/fixtures/2026年4月分析/经营报表/: 伯豪瑞廷.xlsx  北京中言.xlsx  大连凯丹.xlsx  春夏秋冬.xlsx  盛唐融信.xlsx  重庆宜新.xlsx
(+56 files in other folders)
